# SparkDetection

./: README.md
Project/: CMakeLists.txt  Progect.kdev4  main.cpp  song.db  src.qrc
Project/DataBase/: Check.cpp  Check.h  Config.cpp  Config.h  Picture.cpp  Picture.h  Result.cpp  Result.h  SqlUtils.cpp  SqlUtils.h  TableBase.cpp  TableBase.h
Project/Graphics/: Circle.cpp  Circle.h  CircleGroup.cpp  CircleGroup.h  ItemT.cpp  ItemT.h  NumCircle.cpp  NumCircle.h  Point.cpp  Point.h  TangleGroup.cpp  TangleGroup.h
Project/MpvPlayer/: Player.cpp  Player.h  Widget.cpp  Widget.h
Project/Thread/: LoadThread.cpp  LoadThread.h  ProcessThread.cpp  ProcessThread.h  algorithm.cpp  algorithm.h
Project/Widgets/: ButtonBar.cpp  ButtonBar.h  CheckView.cpp  CheckView.h  DataWidget.cpp  DataWidget.h  HomeWidget.cpp  HomeWidget.h  ImageButton.cpp  ImageButton.h  MainWidget.cpp  MainWidget.h  ObjItem.cpp  ObjItem.h  PlayView.cpp  PlayView.h  SettingWidget.cpp  SettingWidget.h  StackWidget.cpp  StackWidget.h  StateItem.cpp  StateItem.h  ViewWidget.cpp  ViewWidget.h
opencv3/: CMakeLists.txt  README  main.cpp
